@@ -1,6 +1,7 @@
 todoyu assets extension changelog
 
 assets 1.1.3 - not released yet
+	* Changed: Removed source filename from upload progress message
 	* Changed: Maximum upload filename length from 50 to 256 characters
 	* Added: Task contextmenu item "add new asset"
 
